--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.8.1",
     "moment": "^2.30.1",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
     "tailwindcss": "^4.0.11",
     "vee-validate": "^4.15.0",
