--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.0.11",
     "@vee-validate/yup": "^4.15.0",
     "axios": "^1.8.1",
+    "font-awesome": "^4.7.0",
     "moment": "^2.30.1",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
