--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.0.11",
     "@vee-validate/yup": "^4.15.0",
     "axios": "^1.8.1",
+    "chart.js": "^4.4.8",
     "font-awesome": "^4.7.0",
     "moment": "^2.30.1",
     "pinia": "^3.0.1",
@@ -27,6 +28,7 @@
     "tailwindcss": "^4.0.11",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
