--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.8",
     "font-awesome": "^4.7.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
