--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "pinia": "^3.0.1",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -51,6 +53,7 @@
     "prettier": "^3.5.1",
     "typescript": "~5.7.3",
     "vite": "^6.1.0",
+    "vite-plugin-mkcert": "^1.17.7",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5",
     "vue-tsc": "^2.2.2"
