--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@vitest/eslint-plugin": "1.1.31",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.4.0",
-    "@vue/test-Utils": "^2.4.6",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
